--- a/style/index.scss
+++ b/style/index.scss
@@ -4,6 +4,8 @@
 // 3. mixins 
 // 4. nav bar 
 // 5. projects 
+// 6. footer 
+// 7. animation
 
 // 1
 
@@ -32,12 +34,10 @@ $goldenRatio: 1.618;
 header {
     display: flex;
     width: 100vw;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: baseline;
 }
-.nav-container {
-    @include defaultStats(1);
-}
+
 .name-container {
     @include defaultStats(1);
     a {
@@ -45,6 +45,18 @@ header {
     }
 }
 
+.nav-container {
+    @include defaultStats(1);
+    display: flex;
+    width: max-content;
+    justify-content: space-evenly;
+}
+// if the screen is a certain size than the text should be smaller
+@media only screen and (max-width: 700px) {
+    .nav-container {
+        @include defaultStats(1);
+    }
+}
 // 5
 
 .project-container {
@@ -62,4 +74,38 @@ header {
 }
 .project-card:first-child {
     width: 90vw;
+}
+
+// 6
+
+footer {
+    width: 100vw;
+    height: 50px;
+    background-color: grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    button {
+        @include defaultStats(2);
+        border-radius: 1000px;
+        width: 200px;
+        &:focus {
+            outline: none;
+            animation: hover 300ms ease forwards;
+        }
+        &:hover {
+            animation: hover 500ms ease forwards;
+        }
+    }
+}
+
+// 7
+
+@keyframes hover {
+    from {
+        font-size: 100%;
+    }
+    to {
+        font-size: 160%;
+    }
 }
