--- a/style/index.scss
+++ b/style/index.scss
@@ -8,7 +8,6 @@
 // 7. animation
 
 // 1
-
 *, *::after, *::before {
     display: border-box;
     margin: 0px;
@@ -16,53 +15,52 @@
 }
 
 // 2
-
 $primaryColor: black;
-$secondaryColor: brown;
-$maxFont: 60px;
+$secondaryColor: brown;   
+$minSize: 5px;
 $goldenRatio: 1.618;
-// 3
 
-@mixin defaultStats($size) {
+
+// 3
+@mixin defaultStats() {
     margin: .2em;
     padding: .2em;
-    font-size: $maxFont / ($goldenRatio * $size);
+}
+@mixin fontSize($size) {
+    font-size: $minSize * $goldenRatio * $size;
 }
 
 // 4
-
 header {
     display: flex;
     width: 100vw;
+    height: 10%;
     justify-content: space-evenly;
     align-items: baseline;
 }
 
 .name-container {
-    @include defaultStats(1);
+    @include defaultStats();
+    @include fontSize(2);
 }
 
 .nav-container {
-    @include defaultStats(1);
+    @include defaultStats();
+    @include fontSize(2);
     display: flex;
     width: max-content;
     justify-content: space-evenly;
     a {
         color: $secondaryColor;
-        @include defaultStats(1);
+        @include defaultStats();
+        @include fontSize(2);
         &:hover {
             animation: hover 1000ms ease-in-out forwards;
         }
     }
 }
-// if the screen is a certain size than the text should be smaller
-@media only screen and (max-width: 700px) {
-    .nav-container {
-        @include defaultStats(2);
-    }
-}
-// 5
 
+// 5
 .project-container {
     display: flex;
     width: 100vw;
@@ -71,7 +69,8 @@ header {
     align-items: center;
 }
 .project-card {
-    @include defaultStats(2);
+    @include defaultStats();
+    @include fontSize(2);
     width: 30vw;
     height: 25vw;
     background-color: $primaryColor;
@@ -81,7 +80,6 @@ header {
 }
 
 // 6
-
 footer {
     width: 100vw;
     height: 50px;
@@ -90,7 +88,7 @@ footer {
     justify-content: center;
     align-items: center;
     button {
-        @include defaultStats(2);
+        @include defaultStats();
         border-radius: 1000px;
         width: 200px;
         transition-duration: 500ms;
@@ -101,7 +99,6 @@ footer {
 }
 
 // 7
-
 @keyframes hover {
     from {
         font-size: 100%;
@@ -113,4 +110,21 @@ footer {
 :focus {
     outline: none;
     animation: hover 500ms ease forwards;
+}
+
+// last
+@media only screen and (max-width: 361) {
+    header {
+        @include fontSize(2);
+        justify-content: center;
+    }
+    nav {
+        align-items: center;
+    }
+}
+// if the screen is a certain size than the text should be smaller
+@media only screen and (max-width: 1367px) {
+    header {
+        @include fontSize(100);
+    }
 }
